plugins {
    id "fabric-loom" version "${loom_version}"
    id "maven-publish"
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}


repositories {
    maven {
        name = "Fabric"
        url = "https://maven.fabricmc.net/"
    }
    maven {
        name = "Nucleoid"
        url = "https://maven.nucleoid.xyz/"
    }
    maven {
        name = "maxhenkel"
        url = "https://maven.maxhenkel.de/repository/public"
    }
}

dependencies {
    // Main
    minecraft("com.mojang:minecraft:${project.minecraft_version}")
    mappings("net.fabricmc:yarn:${project.yarn_mappings}:v2")
    modImplementation("net.fabricmc:fabric-loader:${project.loader_version}")

    // Fabric API
    modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")

    // Plasmid
    modImplementation("xyz.nucleoid:plasmid:${project.plasmid_version}")

    // Polymer
    modImplementation "eu.pb4:polymer-autohost:${project.polymer_version}"

    // Simple Voice Chat (optional - compile-only, mod is not required at runtime)
    modCompileOnly "de.maxhenkel.voicechat:voicechat-api:2.6.19"
}

processResources {
    filteringCharset = 'UTF-8'

    inputs.property "version", project.version

    def versionValue = project.version
	filesMatching("fabric.mod.json") {
		expand "version": versionValue
	}
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
	def archivesNameValue = project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${archivesNameValue}"}
	}
}
